--- a/src/output.css
+++ b/src/output.css
@@ -598,6 +598,10 @@ video {
   inset: 0px;
 }
 
+.-left-4 {
+  left: -1rem;
+}
+
 .-top-2 {
   top: -0.5rem;
 }
@@ -678,20 +682,64 @@ video {
   top: 13rem;
 }
 
-.top-\[100\%\] {
-  top: 100%;
+.left-3 {
+  left: 0.75rem;
 }
 
-.top-12 {
-  top: 3rem;
+.right-3 {
+  right: 0.75rem;
 }
 
-.top-8 {
-  top: 2rem;
+.-top-4 {
+  top: -1rem;
 }
 
-.-left-4 {
-  left: -1rem;
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.right-7 {
+  right: 1.75rem;
+}
+
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.left-\[50\%\] {
+  left: 50%;
+}
+
+.bottom-9 {
+  bottom: 2.25rem;
+}
+
+.bottom-14 {
+  bottom: 3.5rem;
+}
+
+.bottom-11 {
+  bottom: 2.75rem;
+}
+
+.right-\[50\%\] {
+  right: 50%;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-\[60\%\] {
+  top: 60%;
 }
 
 .z-10 {
@@ -708,6 +756,10 @@ video {
 
 .z-40 {
   z-index: 40;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .order-first {
@@ -885,12 +937,24 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
 
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -907,6 +971,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .h-1 {
@@ -949,6 +1017,18 @@ video {
   height: 100vh;
 }
 
+.h-64 {
+  height: 16rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
 .max-h-\[32px\] {
   max-height: 32px;
 }
@@ -965,12 +1045,12 @@ video {
   width: 1rem;
 }
 
-.w-44 {
-  width: 11rem;
-}
-
 .w-52 {
   width: 13rem;
+}
+
+.w-56 {
+  width: 14rem;
 }
 
 .w-64 {
@@ -997,20 +1077,28 @@ video {
   width: 100vw;
 }
 
-.w-48 {
-  width: 12rem;
+.w-24 {
+  width: 6rem;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-36 {
+  width: 9rem;
 }
 
-.w-56 {
-  width: 14rem;
+.w-1\/4 {
+  width: 25%;
+}
+
+.max-w-12 {
+  max-width: 3rem;
 }
 
 .max-w-16 {
   max-width: 4rem;
+}
+
+.max-w-36 {
+  max-width: 9rem;
 }
 
 .max-w-48 {
@@ -1075,6 +1163,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-\[210px\] {
+  max-width: 210px;
 }
 
 .flex-shrink-0 {
@@ -1300,24 +1392,14 @@ video {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
-.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
-}
-
-.divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-divide-opacity));
-}
-
 .divide-\[\#0D3B66\] > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(13 59 102 / var(--tw-divide-opacity));
 }
 
-.divide-\[\] > :not([hidden]) ~ :not([hidden]) {
-  border-color: ;
+.divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-divide-opacity));
 }
 
 .overflow-auto {
@@ -1334,6 +1416,10 @@ video {
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-\[2\.8rem\] {
+  border-radius: 2.8rem;
 }
 
 .rounded-\[3\.5rem\] {
@@ -1379,6 +1465,16 @@ video {
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
+}
+
+.rounded-t {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.rounded-t-xl {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
 }
 
 .border {
@@ -1435,6 +1531,11 @@ video {
   border-color: rgb(32 200 95 / var(--tw-border-opacity));
 }
 
+.border-\[\#2D3EBF\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(45 62 191 / var(--tw-border-opacity));
+}
+
 .border-\[\#3F52FF\] {
   --tw-border-opacity: 1;
   border-color: rgb(63 82 255 / var(--tw-border-opacity));
@@ -1481,6 +1582,16 @@ video {
   border-right-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-b-\[\#2D3EBF\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(45 62 191 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#D9CBA5\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(217 203 165 / var(--tw-border-opacity));
+}
+
 .border-b-\[\#E6DCCF\] {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(230 220 207 / var(--tw-border-opacity));
@@ -1521,9 +1632,19 @@ video {
   border-top-color: rgb(230 220 207 / var(--tw-border-opacity));
 }
 
+.border-t-\[\#FFCAC2\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(255 202 194 / var(--tw-border-opacity));
+}
+
 .border-t-\[\#c9c3ba\] {
   --tw-border-opacity: 1;
   border-top-color: rgb(201 195 186 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#F2EDE6\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(242 237 230 / var(--tw-border-opacity));
 }
 
 .bg-\[\#20C85F\] {
@@ -1636,6 +1757,11 @@ video {
   background-color: rgb(254 137 141 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#FFCAC2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 202 194 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f7fafb\] {
   --tw-bg-opacity: 1;
   background-color: rgb(247 250 251 / var(--tw-bg-opacity));
@@ -1669,8 +1795,26 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-\[\#F7FAFB\] {
@@ -1679,8 +1823,90 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-\[\#585858\] {
+  --tw-gradient-from: #585858 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(88 88 88 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-300 {
+  --tw-gradient-from: #fca5a5 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(252 165 165 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\] {
+  --tw-gradient-from:  var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ffb800\] {
+  --tw-gradient-from: #ffb800 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 184 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#067355\] {
+  --tw-gradient-from: #067355 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(6 115 85 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#3c288d\] {
+  --tw-gradient-from: #3c288d var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(60 40 141 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#01a0e9\] {
+  --tw-gradient-from: #01a0e9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(1 160 233 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-\[\#ffb800\] {
+  --tw-gradient-to: rgb(255 184 0 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #ffb800 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-\[\#067355\] {
+  --tw-gradient-to: rgb(6 115 85 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #067355 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-\[\#3c288d\] {
+  --tw-gradient-to: rgb(60 40 141 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #3c288d var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-\[\#01a0e9\] {
+  --tw-gradient-to: rgb(1 160 233 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #01a0e9 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .to-white {
   --tw-gradient-to: #fff var(--tw-gradient-to-position);
+}
+
+.to-\[\] {
+  --tw-gradient-to:  var(--tw-gradient-to-position);
+}
+
+.to-\[\#ffb800\] {
+  --tw-gradient-to: #ffb800 var(--tw-gradient-to-position);
+}
+
+.to-\[\#067355\] {
+  --tw-gradient-to: #067355 var(--tw-gradient-to-position);
+}
+
+.to-\[\#3c288d\] {
+  --tw-gradient-to: #3c288d var(--tw-gradient-to-position);
+}
+
+.to-\[\#01a0e9\] {
+  --tw-gradient-to: #01a0e9 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -1734,6 +1960,14 @@ video {
 
 .p-\[5px\] {
   padding: 5px;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
 }
 
 .px-0 {
@@ -1945,8 +2179,32 @@ video {
   padding-top: 2rem;
 }
 
-.pl-44 {
-  padding-left: 11rem;
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pb-0\.5 {
+  padding-bottom: 0.125rem;
+}
+
+.ps-1 {
+  padding-inline-start: 0.25rem;
+}
+
+.pe-1 {
+  padding-inline-end: 0.25rem;
+}
+
+.pe-2 {
+  padding-inline-end: 0.5rem;
+}
+
+.ps-2 {
+  padding-inline-start: 0.5rem;
 }
 
 .text-left {
@@ -2178,11 +2436,6 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
-}
-
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
@@ -2333,9 +2586,91 @@ video {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:inset-0::before {
+  content: var(--tw-content);
+  inset: 0px;
+}
+
+.before\:inset-x-0::before {
+  content: var(--tw-content);
+  left: 0px;
+  right: 0px;
+}
+
+.before\:bottom-0::before {
+  content: var(--tw-content);
+  bottom: 0px;
+}
+
+.before\:top-\[50\%\]::before {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.before\:top-0::before {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.before\:rounded-b-\[2\.8rem\]::before {
+  content: var(--tw-content);
+  border-bottom-right-radius: 2.8rem;
+  border-bottom-left-radius: 2.8rem;
+}
+
+.before\:bg-gradient-to-t::before {
+  content: var(--tw-content);
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.before\:bg-gradient-to-r::before {
+  content: var(--tw-content);
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.before\:from-black\/70::before {
+  content: var(--tw-content);
+  --tw-gradient-from: rgb(0 0 0 / 0.7) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:from-\[\#ffb800\]::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #ffb800 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 184 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:to-\[\]::before {
+  content: var(--tw-content);
+  --tw-gradient-to:  var(--tw-gradient-to-position);
+}
+
+.before\:to-\[\#ffb800\]::before {
+  content: var(--tw-content);
+  --tw-gradient-to: #ffb800 var(--tw-gradient-to-position);
+}
+
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
+}
+
+.after\:inset-x-0::after {
+  content: var(--tw-content);
+  left: 0px;
+  right: 0px;
 }
 
 .after\:left-0::after {
@@ -2348,19 +2683,35 @@ video {
   top: 0px;
 }
 
+.after\:top-\[50\%\]::after {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.after\:bottom-0::after {
+  content: var(--tw-content);
+  bottom: 0px;
+}
+
 .after\:h-\[100\%\]::after {
   content: var(--tw-content);
   height: 100%;
 }
 
-.after\:h-\[10px\]::after {
-  content: var(--tw-content);
-  height: 10px;
-}
-
 .after\:w-7::after {
   content: var(--tw-content);
   width: 1.75rem;
+}
+
+.after\:rounded-\[2\.8rem\]::after {
+  content: var(--tw-content);
+  border-radius: 2.8rem;
+}
+
+.after\:rounded-b-\[2\.8rem\]::after {
+  content: var(--tw-content);
+  border-bottom-right-radius: 2.8rem;
+  border-bottom-left-radius: 2.8rem;
 }
 
 .after\:bg-\[\#2FC97F\]::after {
@@ -2375,9 +2726,40 @@ video {
   background-color: rgb(63 82 255 / var(--tw-bg-opacity));
 }
 
+.after\:bg-\[\#FF9281\]::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 146 129 / var(--tw-bg-opacity));
+}
+
+.after\:bg-gradient-to-t::after {
+  content: var(--tw-content);
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.after\:from-black\/70::after {
+  content: var(--tw-content);
+  --tw-gradient-from: rgb(0 0 0 / 0.7) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.after\:p-3::after {
+  content: var(--tw-content);
+  padding: 0.75rem;
+}
+
 .after\:content-\[\'\'\]::after {
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.hover\:top-\[70\%\]:hover {
+  top: 70%;
+}
+
+.hover\:top-0:hover {
+  top: 0px;
 }
 
 .hover\:scale-105:hover {
@@ -2392,6 +2774,36 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-75:hover {
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-90:hover {
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-50:hover {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-150:hover {
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-125:hover {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:border:hover {
   border-width: 1px;
 }
@@ -2403,6 +2815,11 @@ video {
 .hover\:border-blue-600:hover {
   --tw-border-opacity: 1;
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+
+.hover\:bg-\[\#2D3EBF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 62 191 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#33D977\]:hover {
@@ -2453,6 +2870,11 @@ video {
   color: rgb(13 59 102 / var(--tw-text-opacity));
 }
 
+.hover\:text-\[\#377ef9\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 126 249 / var(--tw-text-opacity));
+}
+
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
@@ -2471,11 +2893,6 @@ video {
 .hover\:text-orange-400:hover {
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#377ef9\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(55 126 249 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -2500,6 +2917,28 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.group:hover .group-hover\:top-0 {
+  top: 0px;
+}
+
+.group:hover .group-hover\:scale-50 {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:scale-75 {
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 640px) {
@@ -2563,10 +3002,6 @@ video {
     margin-top: 2rem;
   }
 
-  .md\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -2577,6 +3012,10 @@ video {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-8 {
+    height: 2rem;
   }
 
   .md\:w-1\/2 {
@@ -2727,6 +3166,12 @@ video {
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .md\:rounded-xl {
     border-radius: 0.75rem;
   }
@@ -2742,6 +3187,10 @@ video {
 
   .md\:p-8 {
     padding: 2rem;
+  }
+
+  .md\:p-4 {
+    padding: 1rem;
   }
 
   .md\:px-16 {
