--- a/src/output.css
+++ b/src/output.css
@@ -682,6 +682,10 @@ video {
   right: 2rem;
 }
 
+.start-0 {
+  inset-inline-start: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -758,11 +762,6 @@ video {
 .mx-24 {
   margin-left: 6rem;
   margin-right: 6rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .mx-auto {
@@ -1661,11 +1660,6 @@ video {
   background-color: rgb(230 220 207 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#E8ECED\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 236 237 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#EF9787\] {
   --tw-bg-opacity: 1;
   background-color: rgb(239 151 135 / var(--tw-bg-opacity));
@@ -1772,6 +1766,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-lime-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 230 53 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2134,6 +2133,10 @@ video {
   padding-top: 0.25rem;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -2144,6 +2147,26 @@ video {
 
 .pt-\[23rem\] {
   padding-top: 23rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pt-\[9rem\] {
+  padding-top: 9rem;
+}
+
+.pt-\[16rem\] {
+  padding-top: 16rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .text-left {
@@ -3137,6 +3160,10 @@ video {
 
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:pt-4 {
+    padding-top: 1rem;
   }
 
   .md\:text-left {
