--- a/src/output.css
+++ b/src/output.css
@@ -726,6 +726,26 @@ video {
   top: 69%;
 }
 
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.top-\[25\%\] {
+  top: 25%;
+}
+
+.top-\[40\%\] {
+  top: 40%;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1004,6 +1024,50 @@ video {
   height: 100vh;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
+.h-\[93px\] {
+  height: 93px;
+}
+
+.h-\[90px\] {
+  height: 90px;
+}
+
+.h-\[85px\] {
+  height: 85px;
+}
+
+.h-\[88px\] {
+  height: 88px;
+}
+
+.h-\[87px\] {
+  height: 87px;
+}
+
+.h-\[8px\] {
+  height: 8px;
+}
+
+.h-\[86px\] {
+  height: 86px;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
 .max-h-\[32px\] {
   max-height: 32px;
 }
@@ -1054,6 +1118,66 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[93px\] {
+  width: 93px;
+}
+
+.w-\[90px\] {
+  width: 90px;
+}
+
+.w-\[85px\] {
+  width: 85px;
+}
+
+.w-\[88px\] {
+  width: 88px;
+}
+
+.w-\[87px\] {
+  width: 87px;
+}
+
+.w-\[8px\] {
+  width: 8px;
+}
+
+.w-\[86px\] {
+  width: 86px;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .max-w-12 {
@@ -1130,6 +1254,14 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[19rem\] {
+  max-width: 19rem;
 }
 
 .flex-shrink-0 {
@@ -1219,8 +1351,16 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
+}
+
+.items-baseline {
+  align-items: baseline;
 }
 
 .items-stretch {
@@ -1377,6 +1517,10 @@ video {
 
 .overflow-auto {
   overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-auto {
@@ -1768,9 +1912,24 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-lime-400 {
+.bg-lime-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(163 230 53 / var(--tw-bg-opacity));
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-deep-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 131 75 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2133,8 +2292,8 @@ video {
   padding-top: 0.25rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .pt-4 {
@@ -2149,24 +2308,8 @@ video {
   padding-top: 23rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-32 {
-  padding-top: 8rem;
-}
-
-.pt-\[9rem\] {
-  padding-top: 9rem;
-}
-
-.pt-\[16rem\] {
-  padding-top: 16rem;
-}
-
-.pt-36 {
-  padding-top: 9rem;
+.ps-10 {
+  padding-inline-start: 2.5rem;
 }
 
 .text-left {
@@ -2236,6 +2379,14 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[0\.25rem\] {
+  font-size: 0.25rem;
+}
+
+.text-\[0\.65rem\] {
+  font-size: 0.65rem;
 }
 
 .font-bold {
@@ -2489,6 +2640,10 @@ video {
   outline-offset: 2px;
 }
 
+.outline {
+  outline-style: solid;
+}
+
 .grayscale {
   --tw-grayscale: grayscale(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2654,6 +2809,10 @@ video {
   content: var(--tw-content);
 }
 
+.hover\:z-50:hover {
+  z-index: 50;
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -2663,6 +2822,12 @@ video {
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-100:hover {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -3156,14 +3321,6 @@ video {
 
   .md\:ps-0 {
     padding-inline-start: 0px;
-  }
-
-  .md\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .md\:pt-4 {
-    padding-top: 1rem;
   }
 
   .md\:text-left {
